<resources>
    <string name="app_name">LearnWithFun</string>
    <string name="learn_with_fun"><font color="#0055DF">Learn </font><font color="#FFAB00">with </font><font color="#40D471">Fun</font></string>
    <string name="splash_screen_background_image">Splash Screen Background Image</string>
    <string name="welcome_to_learn_with_fun"><font color="#FF000000">Welcome to\n</font><font color="#0055DF">Learn </font><font color="#FFAB00">with </font><font color="#40D471">Fun</font></string>
    <string name="welcome_to_learn_with_fun_"><font color="#FF000000">Welcome to </font><font color="#0055DF">Learn </font><font color="#FFAB00">with </font><font color="#40D471">Fun</font></string>
    <string name="learning_is_more_effective_when_it_is_active_rather_than_a_passive_process">Learning is MORE effective when it is ACTIVE rather than a passive process</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="continue_">Continue</string>
    <string name="send_otp">Send OTP</string>
    <string name="otp">OTP</string>
    <string name="enter_the_otp">Enter the OTP</string>
    <string name="resend">Resend OTP</string>
    <string name="enter_six_digit_otp_send_on_your_mobile_number">Enter the Six Digit OTP send on your Mobile Number</string>
    <string name="enter_six_digit_otp_send_on_your_email">Enter Six Digit OTP send on your Email</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="standard_learn">Standard</string>
    <string name="smart_learn">Smart Learn</string>
    <string name="username_learnwithfun_com">username@learnwithfun.com</string>
    <string name="hi_username">Hi, %s!</string>
    <string name="hi_">Hi,</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="learn">Learn</string>
    <string name="search_course">Search Course</string>
    <string name="keep_learning_to_make_progress">Keep Learning to make progress</string>
    <string name="banner_image">Banner Image</string>
    <string name="learn_with_fun_login_desc">Best Teacher | Affordable Pricing | Live Batches | Notes</string>
    <string name="find_your_favourite_course_here">Find your favourite course here!</string>
    <string name="find_you_course_or_mentor">Find you course or mentor</string>
    <string name="popular_courses">Popular courses</string>
    <string name="popular">Popular</string>
    <string name="course">Course</string>
    <string name="reviews">Reviews</string>
    <string name="students">Students</string>
    <string name="see_all">See all</string>
    <string name="new_collection">New Collection</string>
    <string name="courses_in_progress">Courses in Progress</string>
    <string name="enroll_now">Enroll Now</string>
    <string name="about_this_course">About this course</string>
    <string name="show_more">Show more</string>
    <string name="show_less">Show less</string>
    <string name="ellipsis">…</string>
    <string name="by">By %s</string>
    <string name="by_">By</string>
    <string name="week_with_number">Week %s</string>
    <string name="play_video">Play Video</string>
    <string name="player_time_separator">:</string>
    <string name="next_question">Next Question</string>
    <string name="submit_exam">Submit Exam</string>
    <string name="option_number">%d) %s</string>
    <string name="default_error_message">Some Error Occurred</string>
    <string name="otp_sent_successfully">OTP sent successfully</string>
    <string name="create_account">Create Account</string>
    <string name="email_address">Email Address</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="name">Name</string>
    <string name="enter_your_full_name">Enter your Full Name</string>
    <string name="verify_email">Verify Email</string>
    <string name="select_user_type">Select User Type</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>

    <string name="email_not_verified">Email is Not Verified</string>
    <string name="profile_pic_upload_failed">Failed to Upload the Profile Picture. Please Retry.</string>
    <string name="account_created_successfully">Account Created Successfully</string>
    <string name="specify_user_type">Please specify. Are you a Teacher or a Learner?</string>
    <string name="no_internet_please_check_your_internet_connection">No Internet.\nPlease check your Internet Connection</string>
    <string name="wrong_otp_entered">OTP Entered is Wrong</string>
    <string name="email_sent_successfully">Email Sent Successfully to %s</string>
    <string name="email_is_already_taken">Email is already taken</string>
    <string name="email_verfied_successfully">Email Verified Successfully</string>
    <string name="email_not_found">Email not found</string>
    <string name="please_enter_the_verification_code">Please enter the verification code</string>
    <string name="verification_code_not_valid">Verification code not valid</string>
    <string name="enter_a_valid_email">Enter a valid email</string>
    <string name="send_email">Send Email</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="verify_your_phone_number_first">Verify your Phone Number first</string>
    <string name="_91">+91</string>
    <string name="quiz">Quiz</string>
    <string name="course_details_not_found">Course and Contents Not Found</string>
    <string name="other_videos">Other Videos</string>
    <string name="other_attachments_with_this_video">Other Attachments with this video</string>
    <string name="notes">Notes</string>
    <string name="cannot_play_video_as_source_url_is_null">Cannot play video as source url is null</string>
    <string name="answer_explanation">Answer Explanation</string>
    <string name="_i_of_n_questions">%d of %d questions</string>
    <string name="options">Options</string>
    <string name="confirm_to_attend_the_quiz">Confirm to attend the Quiz</string>
    <string name="cancel">Cancel</string>
    <string name="attend_quiz">Attend Quiz</string>
    <string name="loading_quiz">Loading Quiz</string>
    <string name="quiz_loaded_successfully">Quiz Loaded Successfully.\nStarting in 1s</string>
    <string name="failed_to_load_quiz">Failed to Load the Quiz</string>
    <string name="views">Views</string>
    <string name="view">View</string>
    <string name="likes">Likes</string>
    <string name="like">Like</string>
    <string name="course_coverage">%d/%d</string>
    <string name="set_phone_number">+%d %d</string>
    <string name="select_an_option_to_proceed">Select an option to proceed</string>
    <string name="submitting_your_answer">Submitting your answer</string>
    <string name="quiz_submitted_successfully">Quiz Submitted Successfully</string>
    <string name="loading_next_question">Loading Next Question</string>
    <string name="this_is_the_first_question">This is the First Question</string>
    <string name="cheating_detected">Cheating Detected</string>
    <string name="please_dont_violate_exam_rules">Please do not violate exam rules.\nMultiple violations may lead to disqualification.</string>
    <string name="ok">OK</string>
    <string name="quiz_already_attended">Quiz Already Attended</string>
    <string name="search_for_your_favorite_courses">Search for your Favorite Courses</string>
    <string name="enroll">Enroll</string>
    <string name="explore">Explore</string>
    <string name="discount_off">%s%% off</string>
    <string name="price">\u20B9%s</string>
    <string name="student">Student</string>
    <string name="enrolled">Enrolled</string>
    <string name="n_courses_published">%d Courses Published</string>
    <string name="initiating_payment">Initiating Payment</string>
    <string name="fetching_payment_token">Fetching Payment Token</string>
    <string name="starting_payment">Starting Payment</string>
    <string name="payment_started">Payment Started</string>
    <string name="verifying_payment">Verifying Payment</string>
    <string name="failed_to_do_payment">Failed to do the payment</string>
    <string name="payment_cancelled">Payment Cancelled</string>
    <string name="course_enrolled_successfully">Course Enrolled Successfully</string>
    <string name="payment_failed">Payment Failed</string>
    <string name="failed_to_fetch_payment_token">Failed to fetch Payment Token</string>
    <string name="payment_done">Payment Done</string>
    <string name="loading">Loading</string>
    <string name="payment_token_fetched">Payment Token Fetched</string>
    <string name="please_wait_while_we_are_fetching_the_course_details">Please wait while we are fetching the course details</string>
    <string name="videos">Videos</string>
    <string name="please_enroll_first">Please enroll for the course first</string>
    <string name="profile_page">Profile Page</string>
    <string name="enrolled_courses">Enrolled Courses</string>
    <string name="quiz_stats">Quiz Stats</string>
    <string name="activity">Activity</string>
    <string name="notifications">Notifications</string>
    <string name="quiz_overall_performance">Quiz Overall Performance</string>
    <string name="quiz_attended">Quiz Attended</string>
    <string name="courses">Courses</string>


</resources>